# Spritex

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: RENAMING.md
src/: App.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/static/: 001_pokemon.sql  002_shiny_methods.sql  003_cosmetic_forms.sql  004_evolution_chains.sql  005_evolution_edges.sql
src-tauri/migrations/synced/: 001_collection.sql
src-tauri/resources/: static.db
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  test_support.rs
src-tauri/src/commands/: collection.rs  cosmetic_forms.rs  evolution_chains.rs  hunt.rs  methods.rs  mod.rs  pokedex.rs  sync_cmds.rs
src/components/: AppSidebar.tsx  CommandPalette.test.tsx  CommandPalette.tsx  FilterBar.test.tsx  FilterBar.tsx  GenerationBadge.tsx  RecommendedBadge.tsx  ShapeIcon.tsx  SyncRequiredNotice.tsx
src/hooks/: useCollectionLookup.test.ts  useCollectionLookup.ts  usePokemonLookup.test.ts  usePokemonLookup.ts  useSyncStatus.test.ts  useSyncStatus.ts
src/lib/: constants.ts  env.test.ts  env.ts  format.test.ts  format.ts  labels.test.ts  labels.ts  nav.ts  pokedexFilter.test.ts  pokedexFilter.ts  queryKeys.test.ts  queryKeys.ts  statCalc.test.ts  statCalc.ts  tauri.test.ts  tauri.ts
src/routes/: __root.tsx  dex.tsx  games.$gameId.tsx  hunt.tsx  index.test.tsx  index.tsx  pokemon.$id.test.tsx  pokemon.$id.tsx  quick-counter.tsx  settings.tsx  table.tsx  (+1 more)
(+38 files in other folders)
