[package]
name = "spritex"
version = "0.1.0"
description = "Spritex — an unofficial, fan-made Pokémon collection and shiny-hunting companion app"
authors = ["Nicolas Yanez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spritex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
ts-rs = "12.0.1"
keyring = "4.1.2"
tokio = { version = "1.52.3", features = ["full"] }
libsql = "0.9.30"
tauri-plugin-updater = "2.10.1"
uuid = { version = "1.23.3", features = ["v4"] }

